# Robotics

./: .gitignore  README.md
docker/: Dockerfile
lab1/: README.md
lab2/: README.md  setup.py
lab2/worlds/: building_robot.sdf
lab3/: .gitignore  README.md  package.xml  setup.py
lab3/lab3/: circle_path.py  square_path.py  velocity_publisher.py
lab3/launch/: bringup.launch.py  gazebo.launch.py
lab3/mobile_robot_lab/: README.md
lab3/mobile_robot_lab/docker/: Dockerfile
lab3/mobile_robot_lab/ros2_ws/src/mobile_robot_lab/: package.xml  setup.cfg
lab3/mobile_robot_lab/ros2_ws/src/mobile_robot_lab/launch/: bringup.launch.py  gazebo_launch.py
lab3/mobile_robot_lab/ros2_ws/src/mobile_robot_lab/mobile_robot_lab/: odom_path_publisher.py  square_path.py  velocity_publisher.py
lab3/mobile_robot_lab/scripts/: run_docker_linux.sh  run_docker_wsl.sh
lab3/ros2_ws/src/mobile_robot_lab/: setup.py
lab3/ros2_ws/src/mobile_robot_lab/launch/: rviz_launch.py
lab3/ros2_ws/src/mobile_robot_lab/mobile_robot_lab/: diff_drive_math.py  triangle_path.py
lab3/ros2_ws/src/mobile_robot_lab/resource/: mobile_robot_lab
lab3/ros2_ws/src/mobile_robot_lab/rviz/: trajectory.rviz
lab3/scripts/: run_docker_wsl.sh
lab5/: README.md
lab7/: README.md
lab8/: README.md  package.xml  setup.py
lab8/config/: lab8.rviz  motor_calibration.yaml  pick_place_basic.yaml
lab8/lab8/: __init__.py  joint_state_reader.py  kinematics.py  limits.py  run_motion.py  send_ee_goal.py  send_goal.py
lab8/launch/: so101_real.launch.py
scripts/: cmd
